--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -5,4 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IntroActivity"/>
+    tools:context=".IntroActivity">
+
+
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
