--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,21 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="main_bg_color">#000000</color>
+    <color name="logoBlue">#08284a</color>
+    <color name="logoLightBlue">#385c83</color>
+    <color name="logoLightOrange">#f4901d</color>
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="_bg__android_large___1_ek2_color">#FFFFFF</color>
+    <color name="_bg__top_bar_ek1_color">#000000</color>
+    <color name="_bg__frame_3_ek1_color">#385C83</color>
+    <color name="_9_30_color">#191C1B</color>
+    <color name="camera_ek2_color">#2E2E2E</color>
+
 </resources>
