--- a/app/src/main/res/drawable/blue_circle.xml
+++ b/app/src/main/res/drawable/blue_circle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <size android:width="200dp" android:height="200dp"/>
-    <solid android:color="#09294f"/>
+    <solid android:color="@color/logoBlue"/>
     <corners android:topLeftRadius="200dp"/>
 </shape>
