--- a/app/src/main/res/drawable/orange_circle.xml
+++ b/app/src/main/res/drawable/orange_circle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <size android:width="150dp" android:height="150dp"/>
-    <solid android:color="#f6921f"/>
+    <solid android:color="@color/logoLightOrange"/>
     <corners android:radius="75dp"/>
 </shape>
