--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,9 +6,8 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
-    
-    <style name="Theme.Shop_app" parent="Base.Theme.Shop_app" >
-    </style>
+
+    <style name="Theme.Shop_app" parent="Base.Theme.Shop_app"></style>
 
     <style name="Theme.AnimatedSplash.MySplash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/white</item>
@@ -17,7 +16,13 @@
         <item name="postSplashScreenTheme">@style/Base.Theme.Shop_app</item>
     </style>
 
-    <style name="AppTheme.MainPage" parent="Theme.AppCompat.Light">
+    <style name="AppTheme.SignUpPage" parent="Theme.MaterialComponents.Light.NoActionBar"></style>
+
+    <style name="AppTheme.MainPage" parent="Theme.AppCompat.Light.NoActionBar"></style>
+    <!-- Base application theme. -->
+    <style name="Base.Theme.AnimatedSplash.MySplash" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
 </resources>
