--- a/app/src/main/res/layout/activity_pagemain.xml
+++ b/app/src/main/res/layout/activity_pagemain.xml
@@ -61,6 +61,28 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/buttonLogOut"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toBottomOf="@id/textViewScrollable"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="50dp"
+                android:text="LogOut"
+                />
+
+            <TextView
+                android:id="@+id/user_details"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toBottomOf="@id/buttonLogOut"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="123dp"
+                android:text="hiii"
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
