--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,12 @@
 
     <style name="AppTheme.SignUpPage" parent="Theme.MaterialComponents.Light.NoActionBar"></style>
 
+
+
     <style name="AppTheme.MainPage" parent="Theme.AppCompat.Light.NoActionBar"></style>
+
+    <style name="AppTheme.BasketPage" parent="Theme.AppCompat.Light.NoActionBar"></style>
+
     <!-- Base application theme. -->
     <style name="Base.Theme.AnimatedSplash.MySplash" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
