--- a/app/src/main/res/layout/activity_basket.xml
+++ b/app/src/main/res/layout/activity_basket.xml
@@ -65,7 +65,7 @@
     </ScrollView>
 
     <ImageButton
-        android:id="@+id/buttonSearch_basket"
+        android:id="@+id/buttonSearch"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:1"
@@ -77,7 +77,7 @@
 
 
     <ImageButton
-        android:id="@+id/buttonMenu_basket"
+        android:id="@+id/buttonMenu"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:1"
@@ -89,7 +89,7 @@
 
 
     <ImageButton
-        android:id="@+id/buttonLogo_basket"
+        android:id="@+id/buttonLogo"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:1"
@@ -100,7 +100,7 @@
         app:layout_constraintTop_toTopOf="@id/guidelineHor4" />
 
     <ImageButton
-        android:id="@+id/buttonBasket_basket"
+        android:id="@+id/buttonBasket"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:1"
@@ -111,7 +111,7 @@
         app:layout_constraintTop_toTopOf="@id/guidelineHor4" />
 
     <ImageButton
-        android:id="@+id/buttonHeart_basket"
+        android:id="@+id/buttonHeart"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:1"
@@ -123,7 +123,7 @@
 
 
     <ImageButton
-        android:id="@+id/buttonUser_basket"
+        android:id="@+id/buttonUser"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:1"
