--- a/app/src/main/res/layout/activity_heart.xml
+++ b/app/src/main/res/layout/activity_heart.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserActivity">
+    tools:context=".HeartActivity">
 
     <View
         android:id="@+id/bottomBar"
@@ -17,54 +17,16 @@
         app:layout_constraintTop_toTopOf="@id/guidelineHor3"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-
     <View
         android:id="@+id/topBar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/newlogoedit"
-        app:layout_constraintBottom_toBottomOf="@id/guidelineHor2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:background="@color/logoLightBlue"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="@id/guidelineHor2"/>
 
-    <View
-        android:id="@+id/topBarOverlay"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:alpha="0.75"
-        android:background="@color/black"
-        app:layout_constraintBottom_toBottomOf="@id/guidelineHor2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textUserName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="hi"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="@id/guidelineHor1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="30sp" />
-
-    <TextView
-        android:id="@+id/textUserEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="hi"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/textUserName"
-        android:layout_marginTop="7dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="18sp" />
 
     <ScrollView
         android:layout_width="0dp"
@@ -95,23 +57,35 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:textSize="18sp" />
 
-            <Button
-                android:id="@+id/buttonLogOut"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                app:layout_constraintTop_toBottomOf="@id/textViewScrollable"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="50dp"
-                android:text="LogOut"
-                />
+
 
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
+    <ImageButton
+        android:id="@+id/buttonSearch"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        app:srcCompat="@drawable/search"
+        android:background="@color/logoLightBlue"
+        app:layout_constraintStart_toStartOf="@id/guidelineVert1"
+        app:layout_constraintEnd_toEndOf="@id/guidelineVert2"
+        app:layout_constraintTop_toTopOf="@id/guidelineHor1" />
 
+
+    <ImageButton
+        android:id="@+id/buttonMenu"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        app:srcCompat="@drawable/menu"
+        android:background="@color/logoLightBlue"
+        app:layout_constraintStart_toStartOf="@id/guidelineVert7"
+        app:layout_constraintEnd_toEndOf="@id/guidelineVert8"
+        app:layout_constraintTop_toTopOf="@id/guidelineHor1" />
 
 
     <ImageButton
@@ -221,14 +195,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1" />
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHor2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.23" />
+        app:layout_constraintGuide_percent="0.1" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHor3"
@@ -243,6 +217,4 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.948" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
