--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -74,6 +74,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+
         <!-- Nested ConstraintLayout for ScrollView contents -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/scrollableContentLayout"
@@ -105,6 +106,18 @@
                 android:layout_marginTop="50dp"
                 android:text="LogOut"
                 />
+
+            <Button
+                android:id="@+id/buttonAddActivity"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/buttonLogOut"
+                android:layout_marginTop="50dp"
+                android:text="Add Car"
+                />
+
 
 
 
